# imperium

./: .gitignore  LICENSE  MANIFESTO.md  README.md  RECOVERY_NOTE.md  pyproject.toml
config/: council.yaml  protocol.yaml  values.yaml
docs/: CONSEQUENTIAL_DEBATE.md  COUNCIL_MEMBER_PROFILE.md  DECISIONS.md  DELIBERATION_LIFECYCLE.md  EXPERIMENT_PLAN.md  INITIAL_COUNCIL.md  PROJECT_STATUS.md  PROTOCOL_1_1_CHALLENGE_TURNS.md  PROTOCOL_1_2_CARDINALITY_AND_HALTS.md  PROTOCOL_1_3_EVIDENCE_ROUND_ORDERING.md  README.md  STAGE_4_IMPLEMENTATION_PLAN.md  STAGE_5_CODEX_PROVIDER_PLAN.md  STAGE_5_GATE_2E_ATTEMPT_ACCOUNTING.md  STAGE_5_GATE_2F_LIVE_COUNCIL.md  STAGE_5_GATE_2_PROVIDER_INJECTION.md  STAGE_5_IMPLEMENTATION_PLAN.md  STRATEGIC_PROJECT_PLAN.md  VALUE_VOCABULARY.md
prompts/: actionable_plan.md  adjudication.md  articulate_challenge.md  assess_debate_round.md  author_challenge.md  challenge_frames.md  challenge_proposals.md  compare_frames.md  interpretation.md  normalize_after_debate.md  normalize_proposals.md  proposal.md  respond_challenge.md  respond_to_challenge.md  revision.md
tests/: conftest.py  test_all_live_output_schemas.py  test_attempt_accounting.py  test_attempt_integrity.py  test_codex_cli_provider.py  test_context.py  test_council_configuration.py  test_debate_verification.py  test_domain_models.py  test_lifecycle.py  test_live_council_gate.py  test_offline_contracts.py  test_openai_schema.py  test_operator_retry.py  test_persistence.py  test_protocol_1_2_cardinality.py  test_protocol_configuration.py  test_protocol_rules.py  test_protocol_trace.py  (+5 more)
(+54 files in other folders)
